--- a/dona_front/src/styles/admin.css
+++ b/dona_front/src/styles/admin.css
@@ -253,10 +253,12 @@ html {
   justify-content: flex-start; /* ahora se alinea a la izquierda */
   margin-bottom: 14px;
 }
+
 .create-user-btn {
   background-color: #054d11; /* verde oscuro */
   color: white;
-  padding: 10px 18px;
+  padding: 10px 18px !important;
+  width:170px;
   border: none;
   border-radius: 6px;
   font-size: 1rem;
@@ -674,6 +676,7 @@ html {
   font-weight: bold;
   margin-bottom: 2.5rem; /* 👈 Espacio hacia abajo */
   color: #111;
+  margin-left: 6px !important;
 }
 
 table {
@@ -1354,6 +1357,9 @@ html {
   border: 1px solid #ccc;
   font-size: 1rem;
 }
+
+
+
 
 .checkbox-label {
   display: flex;
@@ -2207,4 +2213,71 @@ table {
 
 .exportar-btn:hover {
   background-color: #58971d;
+}
+
+
+
+
+
+
+
+
+
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(20, 20, 20, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.modal-card {
+  background-color: #fff;
+  padding: 30px 40px;
+  border-radius: 20px;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+  text-align: center;
+  max-width: 420px;
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+.modal-title {
+  font-size: 1.25rem;
+  margin-bottom: 25px;
+  color: #333;
+}
+
+.modal-actions {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.confirm-btn {
+  background-color: #e74c3c;
+  color: white;
+  border: none;
+  padding: 10px 18px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.cancel-btn {
+  background-color: #3498db;
+  color: white;
+  border: none;
+  padding: 10px 18px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: scale(0.95); }
+  to { opacity: 1; transform: scale(1); }
 }
